scripting refactoring